--- a/client/views/diagram/sequence/seqDgmView/seqDgmView.html
+++ b/client/views/diagram/sequence/seqDgmView/seqDgmView.html
@@ -7,20 +7,37 @@
             <div class="col col-md-12">
                 <div>
                     {{#if canEdit userId}}
-                        <a class="btn btn-primary btn-lg" href="/diagram/{{_id}}" title="Edit diagram"><i class="fa fa-pencil-square-o">  Edit </i></a>
-                    {{/if}}
-                    <a id="shareBtnID" class="btn btn-default btn-lg" title="Link to diagram for sharing"><i class="fa fa-share-square-o"> Share</i></a>
-                    <a id="infoBtnID" class="btn btn-default btn-lg" title="Show info about diagram"><i class="fa fa-info-circle"> Info </i></a>
-
-                    {{#if canEdit userId}}
-                        <a id="deleteBtnID" href="#" class="btn btn-danger btn-lg" title="Delete diagram"><i class="fa fa-trash"></i></a>
+                        <div class="btn-group">
+                            <button id="editBtnID" type="button" class="btn btn-primary"><i class="fa fa-pencil-square-o">  Edit</i></button>
+                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                <span class="caret"></span>
+                                <span class="sr-only">Toggle Dropdown</span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a id="shareBtnID"  href="#" title="Link to diagram for sharing"><i class="fa fa-share-square-o"> Share</i></a></li>
+                                <li><a id="infoBtnID"   href="#" title="Show info about diagram"><i class="fa fa-info-circle"> Info </i></a></li>
+                                <li class="divider"></li>
+                                <li><a id="deleteBtnID" href="#" title="Delete diagram"><i class="fa fa-trash"> Delete</i></a></li>
+                            </ul>
+                        </div>
+                    {{else}}
+                        <div class="btn-group">
+                            <button id="shareBtnID" type="button" class="btn btn-primary"><i class="fa fa-pencil-square-o">  Share</i></button>
+                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                <span class="caret"></span>
+                                <span class="sr-only">Toggle Dropdown</span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a id="infoBtnID"   href="#" title="Show info about diagram"><i class="fa fa-info-circle"> Info </i></a></li>
+                            </ul>
+                        </div>
                     {{/if}}
 
                     <span class="h2 padded"> <span class="h4 text-primary">{{username}}</span> <span class="h3">|</span> {{title}}</span>
                     <span class="h3">| </span>
                     <i class="fa fa-{{lock}} fa-2x"></i>
                     <a id="starBtnID" href="#" class="padded"><i class="fa fa-{{star}} fa-2x"></i><span class="badge">{{starCnt}}</span></a>
-                    <span class="h3">|</span>
+                    {{#if hasTags}}<span class="h3">|</span>{{/if}}
 
                     {{> tagsDisplay}}
 
