--- a/client/views/diagram/sequence/seqDgm/seqDgm.html
+++ b/client/views/diagram/sequence/seqDgm/seqDgm.html
@@ -63,9 +63,8 @@
                                         &nbsp;&nbsp;
                                         <a id="addTagID" href="#"><i class="fa fa-plus-circle fa-2x"></i></a>
 
-                                        <input type="text" id="inputTagID" placeholder="new tag" value="" size="30" style="display: none;">
-
-
+                                        <input type="text" id="inputTagID" placeholder="new tag" value="" class="fullwidth" style="display: none;">
+                                        {{> typeahead tags=typeaheadTags diagram_id=this._id}}
 
 
                                         {{#each tags}}
