--- a/client/views/diagram/sequence/segDgmList/list/seqDgmList.html
+++ b/client/views/diagram/sequence/segDgmList/list/seqDgmList.html
@@ -47,30 +47,7 @@
                                             </label>
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <div class="col-sm-8">
-                                            <div id="tagsID">
-                                                <input type="text" id="inputTagID" placeholder="add search tag" value="" class=" form-control">
-                                                {{> typeahead tags=typeaheadTags diagram_id=this._id}}
-
-
-                                                {{#each tags}}
-                                                    <span class="tag label label-success">
-                                                        <span>{{this}}</span>
-                                                        <a data-tag="{{this}}" class="tagged" href="#"><i class="fa fa-times-circle white"></i></a>
-                                                    </span>
-                                                {{/each}}
-                                            </div>
-                                        </div>
-                                        <!--<div class="col-sm-4">-->
-                                            <!--<label class="radio-inline">-->
-                                                <!--<input type="radio" name="tagAnd" id="tagAndID" value="and"> <strong>And</strong>-->
-                                            <!--</label>-->
-                                            <!--<label class="radio-inline">-->
-                                                <!--<input type="radio" name="tagOr" id="tagOrID" value="or"> <strong>Or</strong>-->
-                                            <!--</label>-->
-                                        <!--</div>-->
-                                    </div>
+                                    {{> tagsEdit colLabelSize="2" colFieldSize="10" tags=tags options=options}}
                                 </div>
                             </div>
 
