--- a/client/views/diagram/sequence/seqDgm/seqDgm.html
+++ b/client/views/diagram/sequence/seqDgm/seqDgm.html
@@ -56,26 +56,9 @@
                                 </div>
                             </div>
                             {{#if isUpdate}}
-                            <div class="form-group">
-                                <label for="tagsID" class="col-sm-1 control-label">Tags</label>
-                                <div class="col-sm-11">
-                                    <div id="tagsID">
-                                        &nbsp;&nbsp;
-                                        <a id="addTagID" href="#"><i class="fa fa-plus-circle fa-2x"></i></a>
 
-                                        <input type="text" id="inputTagID" placeholder="new tag" value="" class="fullwidth" style="display: none;">
-                                        {{> typeahead tags=typeaheadTags diagram_id=this._id}}
+                            {{> tagsEdit colLabelSize="2" colFieldSize="10" tags=this.tags options=options}}
 
-
-                                        {{#each tags}}
-                                            <span class="tag label label-success">
-                                                <span>{{this}}</span>
-                                                <a data-tag="{{this}}" class="tagged" href="#"><i class="fa fa-times-circle white"></i></a>
-                                            </span>
-                                        {{/each}}
-                                    </div>
-                                </div>
-                            </div>
                             {{/if}}
                             <div class="form-group">
                                 <div class="col col-sm-12">
