--- a/client/views/diagram/sequence/seqDgmView/seqDgmView.html
+++ b/client/views/diagram/sequence/seqDgmView/seqDgmView.html
@@ -18,6 +18,7 @@
                                 <li><a id="infoBtnID"   href="#" title="Show info about diagram"><i class="fa fa-info-circle"> Info </i></a></li>
                                 <li class="divider"></li>
                                 <li><a id="deleteBtnID" href="#" title="Delete diagram"><i class="fa fa-trash"> Delete</i></a></li>
+                                <li><a id="copyBtnID" href="#"><i class="fa fa-files-o"></i> Copy to new diagram</a></li>
                             </ul>
                         </div>
                     {{else}}
@@ -29,6 +30,7 @@
                             </button>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a id="infoBtnID"   href="#" title="Show info about diagram"><i class="fa fa-info-circle"> Info </i></a></li>
+                                <li><a id="copyBtnID" href="#"><i class="fa fa-files-o"></i> Copy to new diagram</a></li>
                             </ul>
                         </div>
                     {{/if}}
