--- a/client/views/diagram/sequence/segDgmList/list/seqDgmList.html
+++ b/client/views/diagram/sequence/segDgmList/list/seqDgmList.html
@@ -8,12 +8,18 @@
                 <div class="panel panel-info">
                     <div class="panel-heading">
                         Search
+                        <div class="pull-right" style="margin-top: -5px">
+                            <div id="searchTypeID" class="btn-group btn-group-sm" role="group" aria-label="Style">
+                                <button type="button" class="btn btn-default searchTypeID {{simpleButtonActive}}" name="simple"> Simple </button>
+                                <button type="button" class="btn btn-default searchTypeID {{advancedButtonActive}}" name="advanced">Advanced</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="panel-body">
                         <form class="form-horizontal">
                             <div class="form-group">
                                 <div class="col-sm-12">
-                                    <input type="text" class="form-control" id="searchTextID" placeholder="Search Text">
+                                    <input type="text" class="form-control" id="searchTextID" placeholder="Search Title">
                                 </div>
                             </div>
                             <div class="panel panel-info">
@@ -27,7 +33,6 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <!--<label for="privateAndPublicID" class="col-sm-2 control-label">My Diagrams</label>-->
                                         <div class="col-sm-10">
                                             <label class="radio-inline">
                                                 <input type="radio" name="private" id="allID" value="all"> <strong>All</strong>
@@ -47,11 +52,18 @@
                                             </label>
                                         </div>
                                     </div>
+
                                     {{> tagsEdit colLabelSize="2" colFieldSize="10" tags=tags options=options}}
+
+                                    <div id="form-searchNounID" class="form-group">
+                                        <div class="col-sm-12">
+                                            <input type="text" class="form-control" id="searchNounID" placeholder="Find by Object Name Used in Diagram">
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
-                            <div class="panel panel-info">
+                            <div id="sortPanelID" class="panel panel-info">
                                 <div class="panel-body">
                                     <strong>Sort</strong>
                                     <div class="form-group">
@@ -76,7 +88,6 @@
                                     </div>
                                 </div>
                             </div>
-
                         </form>
                     </div>
 
