--- a/client/views/diagram/sequence/segDgmList/list/seqDgmList.html
+++ b/client/views/diagram/sequence/segDgmList/list/seqDgmList.html
@@ -74,7 +74,7 @@
 
                 <div class="row">
                     <div class="panel panel-info">
-                        <div class="panel-body">
+                        <div class="panel-body bg-info">
 
                             <div class="col-sm-2">
                                 <h4>Sort</h4>
