--- a/client/views/diagram/sequence/seqDgm/seqDgm.html
+++ b/client/views/diagram/sequence/seqDgm/seqDgm.html
@@ -51,7 +51,7 @@
                                 <div class="col col-sm-12">
                                     <button type="button" class="btn btn-primary disabled" id="redrawBtnID">Redraw</button>
                                     <button type="button" class="btn btn-primary" id="saveBtnID"> Save </button>
-                                    <a class="btn btn-primary" href="/">Cancel</a>
+                                    <a class="btn btn-primary" href="/view/{{_id}}">Cancel</a>
                                         <button type="button" class="btn btn-default" id="shareBtnID">Share</button>
 
                                         <div class="btn-group">
