--- a/client/views/diagram/sequence/seqDgmView/seqDgmView.html
+++ b/client/views/diagram/sequence/seqDgmView/seqDgmView.html
@@ -49,7 +49,9 @@
 
                 {{> seqDgmInfo}}
 
+                <div id="htmlHeader"></div>
                 <div id="diagram"></div>
+                <div id="htmlFooter"></div>
 
             </div>
         </div>
